Fix: Sorted the letter spacing in the main heading.

--- a/src/assets/styles/components/_heading.scss
+++ b/src/assets/styles/components/_heading.scss
@@ -6,7 +6,7 @@
             margin-bottom: 1.3rem;
             font-size: 3.45rem;
             font-weight: 600;
-            letter-spacing: -1.7px;
+            letter-spacing: -.7px;
             color: var(--color-dark-grey);
         }
     
